# BitRPC

./: .gitignore  CLAUDE.md  PythonClientTest.py  README.md  ServerTest.cs  ServerTest.csproj  UserServiceImplementation.cs  WUCAI.md  generate-all.bat  generate-cpp.bat  generate-csharp.bat  generate-python.bat  generator-config.json  install-dependencies.bat
Demo/: CMakeLists.txt  generate-cpp.bat  generator-config.json  test_protocol.pdl
Demo/Client/: CMakeLists.txt  Client.csproj  Client.sln  Program.cs  build_client.bat  client_main.cpp
Demo/Server/: CMakeLists.txt  build_server.bat  server_main.cpp
Demo/cpp/: CMakeLists.txt
Demo/cpp/include/: echorequest_serializer.h  echoresponse_serializer.h  getuserrequest_serializer.h  getuserresponse_serializer.h  itestservice_service.h  loginrequest_serializer.h  loginresponse_serializer.h  models.h  protocol_factory.h  serializer_registry.h  testservice_client.h  testservice_service_base.h  userinfo_serializer.h
Demo/cpp/runtime/: CMakeLists.txt  README.md  client.cpp  client.h  rpc_core.cpp  serialization.cpp  serialization.h  server.cpp  server.h
Demo/cpp/src/: echorequest_serializer.cpp  echoresponse_serializer.cpp  getuserrequest_serializer.cpp  getuserresponse_serializer.cpp  loginrequest_serializer.cpp  loginresponse_serializer.cpp  models.cpp  protocol_factory.cpp  serializer_registry.cpp  testservice_client.cpp  testservice_service_base.cpp  userinfo_serializer.cpp
Demo/csharp/Example/Protocol/Client/: TestServiceClient.cs
Demo/csharp/Example/Protocol/Data/: EchoRequest.cs  EchoResponse.cs  GetUserRequest.cs  LoginResponse.cs
Demo/csharp/Example/Protocol/Serialization/: EchoRequestHandler.cs  EchoResponseHandler.cs  GetUserRequestHandler.cs  GetUserResponseHandler.cs  LoginRequestHandler.cs  LoginResponseHandler.cs  SerializerRegistry.cs  UserInfoHandler.cs
Demo/csharp/Example/Protocol/Server/: ITestServiceService.cs  TestServiceServiceBase.cs
Demo/csharp/Test/Protocol/: Test.Protocol.csproj
Demo/csharp/Test/Protocol/Client/: TestServiceClient.cs
Demo/csharp/Test/Protocol/Data/: EchoRequest.cs  EchoResponse.cs  GetUserRequest.cs  GetUserResponse.cs  LoginRequest.cs  LoginResponse.cs  UserInfo.cs
Demo/csharp/runtime/Client/: RpcClient.cs
Demo/csharp/runtime/Serialization/: BitMaskSerialization.cs
Demo/python/: __init__.py
Demo/python/client/: testservice_client.py
Demo/python/data/: models.py
Demo/python/factory/: protocol_factory.py
Demo/python/runtime/bitrpc/: client.py  server.py
Demo/python/serialization/: echorequest_serializer.py  echoresponse_serializer.py  getuserrequest_serializer.py  getuserresponse_serializer.py  loginrequest_serializer.py  loginresponse_serializer.py  registry.py  userinfo_serializer.py
Demo/python/server/: itestservice_service.py  testservice_service_base.py
Docs/: production-integration-guide.md  protocol-framework-design.md  集成文档.md
Examples/: user_service.pdl
Src/C++Core/: CMakeLists.txt  client.cpp  client.h  rpc_core.cpp  rpc_core.h  serialization.cpp  serialization.h  server.cpp  server.h
Src/CSharp/: BitRPC.Runtime.csproj
Src/CSharp/Serialization/: BitMaskSerialization.cs
Src/CppRuntime/: CppRuntime.sln  CppRuntime.vcxproj  CppRuntime.vcxproj.filters
Src/Generator/: CSharpCodeGenerator.cs  CodeGeneratorCore.cs  CppCodeGenerator.cs  PythonCodeGenerator.cs
Src/GeneratorApp/: .gitignore  BitRPC.Runtime.csproj  CMakeLists.txt  GeneratorApp.csproj  GeneratorApp.sln  Program.cs  generator-config.json
Src/GeneratorApp/C++Core/: client.h
Src/GeneratorApp/Generator/: CSharpCodeGenerator.cs  CodeGeneratorCore.cs  CppCodeGenerator.cs  HashCodeHelper.cs  PythonCodeGenerator.cs
Src/Parser/: PDLParser.cs
Src/Python/bitrpc/: client.py  serialization.py
Src/Serialization/: BitMaskSerialization.cs
Src/Server/: RpcServer.cs
Src/SharedMemory/: README.md  SharedMemoryAPI.cs  build.bat  build.sh  ring_buffer.cpp  ring_buffer.h  shared_memory_api.cpp  shared_memory_api.h  shared_memory_api.py  shared_memory_manager.cpp  shared_memory_manager.h
Src/SharedMemory/examples/: cross_language_test.cpp  cross_language_test.cs  cross_language_test.py
Src/temp/: rpc_core.h
Tests/: build_tests.bat  complex.protocol  repeated_complex.protocol  test.protocol
Tests/BitMaskTest/: BitMaskTest.csproj  Program.cs
Tests/CSharpClient/: CSharpClient.csproj  Program.cs
Tests/CSharpServer/: CSharpServer.csproj  Program.cs
Tests/ComplexMessageDebugTest/: ComplexMessageDebugTest.csproj  Program.cs
Tests/ComplexMessageSerializationTest/: Program.cs
Tests/CppClient/: CMakeLists.txt  main.cpp
Tests/CppTest/: test_cpp.cpp  validate_cpp.py
Tests/CrossLanguageTest/: CrossLanguageTest.csproj  Program.cs
Tests/ObjectPoolPerformanceTest/: ObjectPoolPerformanceTest.csproj  Program.cs
Tests/PythonClient/: test_client.py  test_client_full.py  test_compatibility.py  test_generated_logic.py  test_generated_serializer.py  test_serialization.py
Tests/PythonTest/: test_python.py
Tests/SimpleTest/: Program.cs
Tests/csharp/cpp/: CMakeLists.txt
Tests/csharp/cpp/include/: complexmessage_serializer.h  complexservice_service_base.h  group_serializer.h  iorganizationservice_service.h  models.h  organization_serializer.h  organizationservice_client.h  organizationservice_service_base.h  protocol_factory.h  serializer_registry.h  user_serializer.h
Tests/csharp/cpp/src/: complexmessage_serializer.cpp  complexservice_service_base.cpp  group_serializer.cpp  models.cpp  organization_serializer.cpp  organizationservice_client.cpp  organizationservice_service_base.cpp  serializer_registry.cpp  user_serializer.cpp
Tests/csharp/python/: __init__.py
Tests/csharp/python/client/: organizationservice_client.py
Tests/csharp/python/data/: models.py
Tests/csharp/python/factory/: protocol_factory.py
Tests/csharp/python/serialization/: complexmessage_serializer.py  group_serializer.py  organization_serializer.py  registry.py  user_serializer.py
Tests/csharp/python/server/: iorganizationservice_service.py  organizationservice_service_base.py
(+25 files in other folders)
